third_party/blink/renderer/core/frame/fullscreen_controller.cc
@@ -79,6 +79,14 @@ void FullscreenController::DidEnterFullscreen() {
 
   state_ = State::kFullscreen;
 
+  // Notify all pending local frames in order that we have entered fullscreen.
+  for (LocalFrame* frame : pending_frames_) {
+    if (frame) {
+      if (Document* document = frame->GetDocument())
+        Fullscreen::DidEnterFullscreen(*document);
+    }
+  }
+
   // Notify all local frames that we have entered fullscreen.
   for (Frame* frame = web_view_base_->GetPage()->MainFrame(); frame;
        frame = frame->Tree().TraverseNext()) {
@@ -87,6 +95,7 @@ void FullscreenController::DidEnterFullscreen() {
     if (Document* document = ToLocalFrame(frame)->GetDocument())
       Fullscreen::DidEnterFullscreen(*document);
   }
+  pending_frames_.clear();
 
   // TODO(foolip): If the top level browsing context (main frame) ends up with
   // no fullscreen element, exit fullscreen again to recover.
@@ -162,6 +171,8 @@ void FullscreenController::EnterFullscreen(LocalFrame& frame,
     initial_background_color_override_ =
         web_view_base_->BackgroundColorOverride();
   }
+
+  pending_frames_.insert(&frame);
 
   // If already entering fullscreen, just wait.
   if (state_ == State::kEnteringFullscreen)
