third_party/blink/renderer/core/frame/fullscreen_controller.h
@@ -35,15 +35,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <memory>
 
 #include "third_party/blink/renderer/core/core_export.h"
+#include "third_party/blink/renderer/core/frame/local_frame.h"
 #include "third_party/blink/renderer/platform/geometry/float_point.h"
 #include "third_party/blink/renderer/platform/geometry/int_size.h"
 #include "third_party/blink/renderer/platform/graphics/color.h"
+#include "third_party/blink/renderer/platform/heap/persistent.h"
 
 namespace blink {
 
 class Element;
 class FullscreenOptions;
-class LocalFrame;
 class WebViewImpl;
 
 // FullscreenController is a per-WebView class that manages the transition into
@@ -105,6 +106,10 @@ class CORE_EXPORT FullscreenController {
   FloatPoint initial_visual_viewport_offset_;
   bool initial_background_color_override_enabled_ = false;
   RGBA32 initial_background_color_override_ = Color::kTransparent;
+
+  using PendingFullscreenSet =
+      PersistentHeapLinkedHashSet<WeakMember<LocalFrame>>;
+  PendingFullscreenSet pending_frames_;
 };
 
 }  // namespace blink
